Fix the layout bug described in the parent commmit
Should stop getting distracted in the middle of a commit message.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,6 +1,5 @@
 @import "material";
 
-
 header.results-index {
   @include media-breakpoint-down(sm) {
     h1 {
@@ -58,6 +57,8 @@ div.results-classic-wrapper {
   // make sticky stuff work
   overflow: auto;
   height: 100vh;
+  // always show scrollbar area on Firefox for layout consistenty when filtering
+  overflow-y: scroll;
   // also used to change table layout when focusing on one event
 }
 
